--- a/0508.ipynb
+++ b/0508.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMN9SRWauMw79tn9frrrToj",
+      "authorship_tag": "ABX9TyOVzfhUysRNZjRusLFNuVNv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,13 +96,13 @@
       "cell_type": "code",
       "source": [
         "x=int(input(\"請輸入用月份\"))\n",
-        "if(x ==3,4,5):\n",
+        "if(x>=3 and x<=5):\n",
         "  print(\"{}月是春天！\".format(x))\n",
-        "elif(x == 6,7,8):\n",
+        "elif(x>=6 and x<=8):\n",
         "  print(\"{}月是夏天！\".format(x))\n",
-        "elif(x == 9,10,11):\n",
+        "elif(x>=9 and x<=11):\n",
         "  print(\"{}月是秋天！\".format(x))\n",
-        "elif(x == 12,1,2):\n",
+        "elif(x == 12 or 1 or 2):\n",
         "  print(\"{}月是冬天！\".format(x))\n",
         "else:\n",
         "  print(\"月份不在範圍內！\")"
@@ -112,16 +112,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ad8m0dlEmSXO",
-        "outputId": "12fcb8f5-339b-45fe-c030-4e0c3b9ebddc"
+        "outputId": "ea7904ee-c11c-4b32-e949-85a093690573"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入用月份9\n",
-            "9月是春天！\n"
+            "請輸入用月份2\n",
+            "2月是冬天！\n"
           ]
         }
       ]
